Closed Bug 33810 Opened 26 years ago Closed 25 years ago

Stopping GIF animation in editor stops it elsewhere too

Categories

(Core :: Graphics: ImageLib, defect, P3)

All
Mac System 8.5
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: sfraser_bugs, Assigned: pnunn)

References

Details

(Whiteboard: [dogfood-])

Attachments

(1 file)

We need an API to turn off, or control GIF animation. I think the API should allow the following levels of animation: 1. No animation; just show first (or last?) frame 2. Animate once, then stop 3. Animate for some length of time, then stop (see bug 21620) 4. Animate normally (as controlled by GIF data)
Blocks: 21620
Blocks: 14768
We will probably implement animation controls in stages. -P
Status: NEW → ASSIGNED
Target Milestone: --- → M17
Moving to m18
Target Milestone: M17 → M18
Note that an nsbeta2 bug depends on this one. So I'm adding dogfood.
Keywords: dogfood
Target Milestone: M18 → Future
Future?
Putting on [nsbeta2+][5/16] radar. This is a feature MUST complete work by 05/16 or we may pull this feature for PR2. Putting on dogfood minus. Come to PDT at 4pm today if you needed a dogfood+ on this.
Whiteboard: [nsbeta2+][5/16][dogfood-]
Removing nsbeta2+ since we aren't going to do this feature.
Whiteboard: [nsbeta2+][5/16][dogfood-] → [dogfood-]
dp: this is required for an nsbeta2+ editor bug.
I hear you. This is the first frame thing in gif animation. Pam is this M16 ?
Target Milestone: Future → M16
Yep. Put it on my plate. I'll work it out with Simon. -P
Blocks: 21623
Keywords: nsbeta2
Target Milestone: M16 → M17
I have the fix ready for check in. -P
checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
I'm reopening, because this isn't quite working right. I just checked in code in nsEditorShell to set the animation mode on the pres context to 'none' when loading a document in the editor. But this also halts animation of those same images in a browser window. This is clear when you do 'Edit page' on a page with animated GIFs.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Summary: Need a way to control GIF animation → Stopping GIF animation in editor stops it elsewhere too
No longer blocks: 14768
Depends on: 14768
Simon: I'm closing this bug again and opening a new one to handle the problem of a browser animation stopping in the browser when the page is opened in the editor. There are other bugs that are marked dependent on this bug being fixed. And with the current code, they can now be finished up. New bug is #40624. -P
Status: REOPENED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
Simon, I see this is an old bug but seeing that it is a coding bug, I wanted to check with you before marking verified, is it okay if I do so?
You can verify this one.
QA Contact: elig → tpreston
Marking verified
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: