WIP for bug 33810 -- add an image animation enum, and getters and setters in the pres context